--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "combined-stream-sjs",
-  "version": "0.4.0-pre4",
+  "version": "0.4.2",
   "private": true,
   "dependencies": {
     "combined-stream": "^1.0.5",
